Fix Featured Event spacing and started to fix calandar styling

--- a/src/styles/pages/event/chapter.module.scss
+++ b/src/styles/pages/event/chapter.module.scss
@@ -1,16 +1,10 @@
 @import "../../mixins.scss";
 
-$primary-900: #1B044E;
-$text-secondary-gray: #404447;
-$background-yellow: #FFD420;
-$placeholder-gray: #E0E0E0;
-$mobile-breakpoint: 768px;
-
 .chapter {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: $primary-900;
+  color: var(--font-primary);
   margin-bottom: 42px;
 }
 
@@ -31,19 +25,18 @@ $mobile-breakpoint: 768px;
   }
 
   .title {
-    color: $primary-900;
+    color: var(--font-primary);
     text-align: center;
     font-family: "Helvetica Neue";
     font-size: 36px;
     font-weight: 700;
     line-height: 120%;
-    margin: 0; 
+    margin-left: 26px;
   }
 
   .icon {
     width: 44px;
     height: 44px;
-    background-color: transparent;
   }
 
   .cardsContainer {
@@ -79,7 +72,7 @@ $mobile-breakpoint: 768px;
 
   .title {
     width: 100%; // Ensure full width
-    color: $primary-900;
+    color: var(--font-primary);
     text-align: center;
     font-family: "Helvetica Neue";
     font-size: 36px;
@@ -90,7 +83,7 @@ $mobile-breakpoint: 768px;
 
   .description {
     width: 100%; 
-    color: $text-secondary-gray;
+    color: var(--font-secondary);
     text-align: center;
     font-family: "Helvetica Neue";
     font-size: 18px;
